# WeGo

./: README.md  main.py
backend/: .env  .gitignore  ai_service.py  chat_logic.py  database.py  listeners.py  main.py  models.py  pyproject.toml
ios-app/: APIService.swift  Embeddedpollview.swift  Info.plist  MessagesViewController.swift  PollViewController.swift  README_FRONTEND.md  ThaiPoll.swift  newPoll.swift
ios-app/WeGo MessagesExtension/: MessagesViewController.swift  OverlayController.swift  ScriptedConversationManager.swift
ios-app/WeGo MessagesExtension/Assets.xcassets/iMessage App Icon.stickersiconset/: Contents.json
ios-app/WeGo.xcodeproj/: project.pbxproj
ios-app/WeGo.xcodeproj/project.xcworkspace/xcuserdata/roseliu.xcuserdatad/: UserInterfaceState.xcuserstate
ios-app/WeGo.xcodeproj/xcuserdata/roseliu.xcuserdatad/xcschemes/: xcschememanagement.plist
web/: chatInterface.jsx  index.css  index.html  main.jsx  package-lock.json  package.json
